--- a/p8105_hw3_yw3236.md
+++ b/p8105_hw3_yw3236.md
@@ -15,11 +15,15 @@ devtools::install_github("p8105/p8105.datasets")
 
 ``` r
 library(p8105.datasets)
-
-data(brfss_smart2010)
+data(brfss_smart2010) #read the dataset
 ```
 
-View(brfss\_smart2010)
+### Clean Data
+
+-   Format the data to use appropriate variable names
+-   Focus on the “Overall Health” topic
+-   Include only responses from “Excellent” to “Poor”
+-   Organize responses as a factor taking levels ordered from “Excellent” to “Poor”
 
 ``` r
 formated_brfss_smart2010 = brfss_smart2010 %>%
@@ -27,33 +31,34 @@ formated_brfss_smart2010 = brfss_smart2010 %>%
   rename(., state = locationabbr, county = locationdesc) %>%
   filter(., topic == "Overall Health") %>%
   filter(., response == "Excellent" | response == "Very good" | response == "Good" | response == "Fair" | response == "Poor") %>%
-  mutate(., response = as.factor(.$response)) %>%
-  arrange(., factor(response, levels = c("Excellent", "Very good", "Good", "Fair", "Poor")))
+  mutate(., factor(response, levels = c("Excellent", "Very good", "Good", "Fair", "Poor")))
 
 formated_brfss_smart2010
 ```
 
-    ## # A tibble: 10,625 x 23
+    ## # A tibble: 10,625 x 24
     ##     year state county class topic question response sample_size data_value
-    ##    <int> <chr> <chr>  <chr> <chr> <chr>    <fct>          <int>      <dbl>
+    ##    <int> <chr> <chr>  <chr> <chr> <chr>    <chr>          <int>      <dbl>
     ##  1  2010 AL    AL - ~ Heal~ Over~ How is ~ Excelle~          94       18.9
-    ##  2  2010 AL    AL - ~ Heal~ Over~ How is ~ Excelle~          91       15.6
-    ##  3  2010 AL    AL - ~ Heal~ Over~ How is ~ Excelle~          58       20.8
-    ##  4  2010 AZ    AZ - ~ Heal~ Over~ How is ~ Excelle~         269       27.3
-    ##  5  2010 AZ    AZ - ~ Heal~ Over~ How is ~ Excelle~          68       17  
-    ##  6  2010 AZ    AZ - ~ Heal~ Over~ How is ~ Excelle~         133       20.5
-    ##  7  2010 AR    AR - ~ Heal~ Over~ How is ~ Excelle~          67       23.1
-    ##  8  2010 AR    AR - ~ Heal~ Over~ How is ~ Excelle~         100       29  
-    ##  9  2010 AR    AR - ~ Heal~ Over~ How is ~ Excelle~          47       24.1
-    ## 10  2010 CA    CA - ~ Heal~ Over~ How is ~ Excelle~         167       24  
-    ## # ... with 10,615 more rows, and 14 more variables:
+    ##  2  2010 AL    AL - ~ Heal~ Over~ How is ~ Very go~         148       30  
+    ##  3  2010 AL    AL - ~ Heal~ Over~ How is ~ Good             208       33.1
+    ##  4  2010 AL    AL - ~ Heal~ Over~ How is ~ Fair             107       12.5
+    ##  5  2010 AL    AL - ~ Heal~ Over~ How is ~ Poor              45        5.5
+    ##  6  2010 AL    AL - ~ Heal~ Over~ How is ~ Excelle~          91       15.6
+    ##  7  2010 AL    AL - ~ Heal~ Over~ How is ~ Very go~         177       31.3
+    ##  8  2010 AL    AL - ~ Heal~ Over~ How is ~ Good             224       31.2
+    ##  9  2010 AL    AL - ~ Heal~ Over~ How is ~ Fair             120       15.5
+    ## 10  2010 AL    AL - ~ Heal~ Over~ How is ~ Poor              66        6.4
+    ## # ... with 10,615 more rows, and 15 more variables:
     ## #   confidence_limit_low <dbl>, confidence_limit_high <dbl>,
     ## #   display_order <int>, data_value_unit <chr>, data_value_type <chr>,
     ## #   data_value_footnote_symbol <chr>, data_value_footnote <chr>,
     ## #   data_source <chr>, class_id <chr>, topic_id <chr>, location_id <chr>,
-    ## #   question_id <chr>, respid <chr>, geo_location <chr>
+    ## #   question_id <chr>, respid <chr>, geo_location <chr>, `factor(response,
+    ## #   levels = c("Excellent", "Very good", "Good", \n "Fair",
+    ## #   "Poor"))` <fct>
 
-View(formated\_brfss\_smart2010)
+### Question 1
 
 ``` r
 formated_brfss_smart2010_2002 = formated_brfss_smart2010 %>%
@@ -64,7 +69,11 @@ formated_brfss_smart2010_2002 = formated_brfss_smart2010 %>%
   summarize(n = n())
 ```
 
-View(formated\_brfss\_smart2010\_2002)
+In 2002, CT, FL, NC were observed at 7 locations.
+
+### Question 2
+
+Make a “spaghetti plot” that shows the number of locations in each state from 2002 to 2010.
 
 ``` r
 plot_2002_to_2010 = formated_brfss_smart2010 %>%
@@ -78,7 +87,13 @@ plot_2002_to_2010 = formated_brfss_smart2010 %>%
 plot_2002_to_2010
 ```
 
-![](p8105_hw3_yw3236_files/figure-markdown_github/unnamed-chunk-5-1.png) View(formated\_brfss\_smart2010\_2002\_to\_2010)
+![](p8105_hw3_yw3236_files/figure-markdown_github/unnamed-chunk-5-1.png)
+
+There are many lines in the plot, just like "spaghetti". It's kind of difficult to read information from this plot.
+
+### Question 3
+
+Make a table showing, for the years 2002, 2006, and 2010, the mean and standard deviation of the proportion of “Excellent” responses across locations in NY State.
 
 ``` r
 formated_brfss_smart2010_excellent_NY = formated_brfss_smart2010 %>%
@@ -94,12 +109,17 @@ formated_brfss_smart2010_excellent_NY = formated_brfss_smart2010 %>%
 formated_brfss_smart2010_excellent_NY
 ```
 
-|     year|     mean\_ny\_excellent|  std\_ny\_excellent|
-|--------:|-----------------------:|-------------------:|
-|     2002|                    24.0|                 4.5|
-|     2006|                    22.5|                 4.0|
-|     2010|                    22.7|                 3.6|
-|  View(fo|  rmated\_brfss\_smart20|  10\_excellent\_NY)|
+|  year|  mean\_ny\_excellent|  std\_ny\_excellent|
+|-----:|--------------------:|-------------------:|
+|  2002|                 24.0|                 4.5|
+|  2006|                 22.5|                 4.0|
+|  2010|                 22.7|                 3.6|
+
+From the table, we can see that year 2002 has the highest mean and standard deviation of the proportion of “Excellent” responses across locations in NY State.
+
+### Question 4
+
+-   For each year and state, compute the average proportion in each response category. \* Make a five-panel plot that shows, for each response category separately, the distribution of these state-level averages over time.
 
 ``` r
 response_average_prop = formated_brfss_smart2010 %>%
@@ -114,7 +134,9 @@ ggplot(response_average_prop, aes(x = year, y = average_prop)) +
 
     ## Warning: Removed 21 rows containing missing values (geom_point).
 
-![](p8105_hw3_yw3236_files/figure-markdown_github/unnamed-chunk-7-1.png) View(response\_average\_prop)
+![](p8105_hw3_yw3236_files/figure-markdown_github/unnamed-chunk-7-1.png)
+
+For the **excellent** response, the average proportion of it from 2002 to 2010 is approximatelly between 15% and 30 %. For the **very good** response, the average proportion of it from 2002 to 2010 is approximatelly between 25% and 40%. For the **good** response, the average proportion of it from 2002 to 2010 is approximatelly between 25% and 35%. For the **fair** response, the average proportion of it from 2002 to 2010 is approximatelly between 5% and 15%. For the **poor** response, the average proportion of it from 2002 to 2010 is approximatelly between 0% and 10%.
 
 Problem 2
 =========
@@ -123,7 +145,11 @@ Problem 2
 data(instacart)
 ```
 
-View(instacart)
+#### Description of the Dataset
+
+The dataset is about instacart company sale information. The size of the dataset is 1,384,617 x 15. The structure of the dataset is ready for the analysis. The key variables are `order_dow`, `order_hour_of_day`, `product_name`, `aisle`. Each observation includes custmers' information, ordered products' imformation.
+
+### Question 1
 
 ``` r
 n_aisles = nrow(instacart %>%
@@ -156,7 +182,11 @@ most_order_aisles
     ## 4 fresh fruits                 150473
     ## 5 fresh vegetables             150609
 
-View(most\_order\_aisles)
+There are 134 aisles there. The most items ordered from fresh vegetables aisle.
+
+### Question 2
+
+Make a plot that shows the number of items ordered in each aisle.
 
 ``` r
 order_aisles = instacart %>%
@@ -166,13 +196,20 @@ order_aisles = instacart %>%
   summarise(item_num = n()) %>%
   arrange(., desc(item_num)) %>%
   ggplot() +  
-  geom_point(aes(x = reorder(aisle, -item_num), y = item_num, color = item_num)) +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1, size = rel(1)))
+  geom_point(aes(x = reorder(aisle, -item_num), y = item_num)) +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1, size = rel(1))) +
+  labs(x = "Aisle", y = "Number of Items")
 
 order_aisles
 ```
 
-![](p8105_hw3_yw3236_files/figure-markdown_github/unnamed-chunk-10-1.png) View(order\_aisles)
+![](p8105_hw3_yw3236_files/figure-markdown_github/unnamed-chunk-10-1.png)
+
+Since there are too many aisles in the x axis, I choose to order the `item_num` as decending order and adjust the theme of the graph, such as set the angle is 90. From the graph, we can see that there are few items that has really high number of items. The number of items of the majority of aisles is under 50000.
+
+### Question 3
+
+Make a table showing the most popular item in each of the aisles “baking ingredients”, “dog food care”, and “packaged vegetables fruits”.
 
 ``` r
 popular_aisles = instacart %>%
@@ -210,6 +247,12 @@ tibble(
 | dog food care              | Snack Sticks Chicken & Rice Recipe Dog Treats |
 | packaged vegetables fruits | Organic Baby Spinach                          |
 
+By looking at the table, we can find the most poplular items in each aisle mentioned above. We can see that light brown sugar is the most popular ingredients. Dog owners love Snack Sticks Chicken & Rice Recipe Dog Treats. The most popular vegetable is organic baby spinach. From the table, the company can buy more those popular items for sale.
+
+### Question 4
+
+Make a table showing the mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are ordered on each day of the week.
+
 ``` r
 mean_hour = instacart %>%
   select(., product_name, order_hour_of_day, order_dow) %>%
@@ -223,7 +266,7 @@ table_mean_hour = mean_hour %>%
   mutate(mean_hour_day = format(mean_hour_day, nsmall = 2)) %>%
   separate(mean_hour_day, into = c("hours", "mins"), sep = "\\.") %>%   
   mutate(mins = round(as.numeric(mins)*0.6)) %>%  
-  mutate(average_time_order = paste(hours, "hours", mins, "mins")) %>% 
+  mutate(average_time_order = paste(hours, ":", mins)) %>% 
   select(day, product_name, average_time_order) %>%   
   spread(key = day, value = average_time_order) %>% 
   knitr::kable(digits = 2, col.names = c("Product", "Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat"),
@@ -232,10 +275,12 @@ table_mean_hour = mean_hour %>%
 table_mean_hour
 ```
 
-| Product          | Sun              | Mon              | Tue              | Wed              | Thu              | Fri              | Sat              |
-|:-----------------|:-----------------|:-----------------|:-----------------|:-----------------|:-----------------|:-----------------|:-----------------|
-| Coffee Ice Cream | 13 hours 46 mins | 14 hours 19 mins | 15 hours 23 mins | 15 hours 19 mins | 15 hours 13 mins | 12 hours 16 mins | 13 hours 50 mins |
-| Pink Lady Apples | 13 hours 26 mins | 11 hours 22 mins | 11 hours 42 mins | 14 hours 15 mins | 11 hours 33 mins | 12 hours 47 mins | 11 hours 56 mins |
+| Product          | Sun     | Mon     | Tue     | Wed     | Thu     | Fri     | Sat     |
+|:-----------------|:--------|:--------|:--------|:--------|:--------|:--------|:--------|
+| Coffee Ice Cream | 13 : 46 | 14 : 19 | 15 : 23 | 15 : 19 | 15 : 13 | 12 : 16 | 13 : 50 |
+| Pink Lady Apples | 13 : 26 | 11 : 22 | 11 : 42 | 14 : 15 | 11 : 33 | 12 : 47 | 11 : 56 |
+
+From the table, we can see coffee ice cream is usually bought after 12AM and pink laby apples are usually bought before 12AM.
 
 Problem 3
 =========
@@ -244,7 +289,13 @@ Problem 3
 data(ny_noaa)
 ```
 
-View(ny\_noaa)
+#### Description of the Dataset
+
+The size of the dataset is 2,595,176 x 7. I would say all of the variables in the dataset are key variables because different problems need different variables. The structure of this data is ready for the analysis, except for seperating date variable. Each variable of this dataset have lots of missing values. Those missing data might couse not accurate result.
+
+### Question 1
+
+Separate variables for year, month, and day.
 
 ``` r
 formated_ny_noaa = ny_noaa %>% 
@@ -288,7 +339,11 @@ common_snwd
     ##   <int>   <int>
     ## 1     0 1621683
 
-View(formated\_ny\_noaa) View(common\_snwd)
+For snowfall, the most commonly observed values are 0. The reason is becasue snow only in winter time and winter time is relatively short comparing a whole year.
+
+### Question 2
+
+Make a two-panel plot showing the average max temperature in January and in July in each station across years.
 
 ``` r
 jan_jul_temp = formated_ny_noaa %>%
@@ -311,22 +366,32 @@ ggplot(jan_jul_temp, aes(x = year, y = average_max_temp)) +
   facet_grid(~month) 
 ```
 
-![](p8105_hw3_yw3236_files/figure-markdown_github/unnamed-chunk-15-2.png) View(jan\_jul\_temp)
+![](p8105_hw3_yw3236_files/figure-markdown_github/unnamed-chunk-15-2.png)
+
+There is an observable structure. The average max temperature in Jan is lower than the average max temperature in Jul. There are outiers. Those outilers are easily to be identified from boxplot.
+
+### Question 3
+
+Plot tmax vs tmin for the full dataset.
 
 ``` r
+library(hexbin)
+
 temp = formated_ny_noaa %>%
   select(., id, year, month, day, tmax, tmin) %>%
   filter(., !is.na(tmax) & !is.na(tmin)) 
 
 temp_plot = ggplot(temp, aes(x = tmin, y = tmax)) +     
-  geom_density_2d() +    
+  geom_hex() +    
   labs(x = "Min Temp (C)",
        y = "Max Temp (C)")
 
 temp_plot
 ```
 
-![](p8105_hw3_yw3236_files/figure-markdown_github/unnamed-chunk-16-1.png) View(temp)
+![](p8105_hw3_yw3236_files/figure-markdown_github/unnamed-chunk-16-1.png)
+
+Make a plot showing the distribution of snowfall values greater than 0 and less than 100 separately by year.
 
 ``` r
 snowfall = formated_ny_noaa %>%
@@ -341,4 +406,4 @@ snow_plot = ggplot(snowfall) +
 snow_plot
 ```
 
-![](p8105_hw3_yw3236_files/figure-markdown_github/unnamed-chunk-17-1.png) View(snowfall)
+![](p8105_hw3_yw3236_files/figure-markdown_github/unnamed-chunk-17-1.png)
