--- a/p8105_hw3_yw3236.md
+++ b/p8105_hw3_yw3236.md
@@ -391,6 +391,8 @@ temp_plot
 
 ![](p8105_hw3_yw3236_files/figure-markdown_github/unnamed-chunk-16-1.png)
 
+There are two peaks in the hex plot.
+
 Make a plot showing the distribution of snowfall values greater than 0 and less than 100 separately by year.
 
 ``` r
@@ -400,10 +402,33 @@ snowfall = formated_ny_noaa %>%
   group_by(year)
 
 snow_plot = ggplot(snowfall) + 
-  geom_violin(aes(x = year, y = snow)) +
+  geom_boxplot(aes(x = year, y = snow)) +
   labs(x = "Year", y = "Snow (mm)")
 
 snow_plot
 ```
 
 ![](p8105_hw3_yw3236_files/figure-markdown_github/unnamed-chunk-17-1.png)
+
+Each year's box plot is relatively same.
+
+Combine two plots.
+
+``` r
+require(gridExtra)
+```
+
+    ## Loading required package: gridExtra
+
+    ## 
+    ## Attaching package: 'gridExtra'
+
+    ## The following object is masked from 'package:dplyr':
+    ## 
+    ##     combine
+
+``` r
+grid.arrange(temp_plot, snow_plot, ncol = 2)
+```
+
+![](p8105_hw3_yw3236_files/figure-markdown_github/unnamed-chunk-18-1.png)
